--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: 自用图片站
-description: [存的都是图片]
+description: 专门存放博客图片
